Refactor authentication logic, improve token management, and reorganize imports in changed files
- Rewrote Spring Security and authentication logic for better structure
- Moved .env file outside of frontend source code for improved security
- Implemented refresh token logic in the backend to enhance session management
- Reorganized imports in changed files for better code readability